@@ -1,0 +1,7 @@
+/* $Id$ */
+
+.series {
+  border-bottom: 1px solid #E9EFF3;
+  margin: 0 -26px 1.5em;
+  padding: 1.5em 26px;
+}
